--- a/Step01_Servlet/WebContent/index.html
+++ b/Step01_Servlet/WebContent/index.html
@@ -3,27 +3,39 @@
 <head>
 <meta charset="UTF-8">
 <title>/index.html</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+	crossorigin="anonymous">
 </head>
 <body>
-<div class="container">
-	<h1>인덱스 페이지 입니다</h1>
-	<ul>
-		<!-- 상대경로 이동 -->
-		<li><a href="hello.html">hello 페이지</a></li>
-		<!-- 절대경로 이동 -->
-		<li><a href="/Step01_Servlet/hello.html">hello 페이지</a></li>
-		<li><a href="sub/play.html">놀러가기</a></li>
-		<li><a href="hello">hello 페이지</a></li>
-<<<<<<< HEAD
-		<li><a href="fortune">fortune page</a></li>
-=======
-		<li><a href="fortune">오늘의 운세</a></li>
-		<li><a href="friend/list">친구 목록 보기</a></li>
-		<li><a href="/Step01_Servlet/member/list">회원 목록 보기</a></li>
->>>>>>> upstream/master
-	</ul>
-</div>
+	<div class="container">
+		<h1>인덱스 페이지 입니다</h1>
+		<ul>
+			<!-- 상대경로 이동 -->
+			<li><a href="hello.html">hello 페이지</a></li>
+			<!-- 절대경로 이동 -->
+			<li><a href="/Step01_Servlet/hello.html">hello 페이지</a></li>
+			<li><a href="sub/play.html">놀러가기</a></li>
+			<li><a href="hello">hello 페이지</a></li>
+			<li><a href="fortune">오늘의 운세</a></li>
+			<li><a href="friend/list">친구 목록 보기</a></li>
+			<li><a href="/Step01_Servlet/member/list">회원 목록 보기</a></li>
+			<li><a href="users/loginform.html">login page</a></li>
+		</ul>
+		<!-- when the form is submitted, action요청경로, method전송방식
+it is requested to server according to action&the messages are submitted through the method  -->
+		<form action="send" method="get">
+			<input type="text" name="msg" placeholder="enter texts here">
+			<button type="submit">submit</button>
+		</form>
+		<br />
+		<form action="send" method="post">
+			<input type="text" name="msg2" placeholder="enter texts here">
+			<button type="submit">submit</button>
+		</form>
+	</div>
 </body>
 </html>
 
