signup form added

--- a/Step01_Servlet/WebContent/index.html
+++ b/Step01_Servlet/WebContent/index.html
@@ -23,8 +23,9 @@
 			<li><a href="friend/list">친구 목록 보기</a></li>
 			<li><a href="/Step01_Servlet/member/list">회원 목록 보기</a></li>
 			<li><a href="users/loginform.html">login page</a></li>
+			<li><a href="users/signup_form.html">sign up page</a></li>
 		</ul>
-		<!-- when the form is submitted, action요청경로, method전송방식
+<!-- when the form is submitted, action요청경로, method전송방식
 it is requested to server according to action&the messages are submitted through the method  -->
 		<form action="send" method="get">
 			<input type="text" name="msg" placeholder="enter texts here">
